# Cpp-Qt6-Template

./: .clang-format  CMakeLists.txt  README.md  flake.nix
src/: main.cpp
